@@ -16,7 +16,6 @@
 
 static void vmmgr_add(rb_vm_t *vm);
 static void vmmgr_del(rb_vm_t *vm);
-void rb_vm_free(rb_vm_t *vm);
 
 static int vm_join(rb_vm_t *vm);
 
@@ -51,8 +50,10 @@ ruby_vm_join(rb_vm_t *vm)
 int
 ruby_vm_destruct(rb_vm_t *vm)
 {
-    rb_vm_free(vm);
-    vmmgr_del(vm);
+    if (ruby_vm_free(vm)) {
+	vmmgr_del(vm);
+	free(vm);
+    }
     return 0;
 }
 
